[package]
name = "enso-darknet"
version = "0.1.0"
edition = "2021"
author = ["Sadovnikov Anton <sadovnikoff@gmail.com>"]

description = "Stable diffusion pipeline"
repository = "https://github.com/siddthartha/enso-darknet"
keywords = ["torch", "deep-learning", "machine-learning", "diffusion", "transformers"]
categories = ["science"]
license = "GPLv3"
readme = "README.md"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#clap = "3.2.21"
clap = { version = "4.0.19", features = ["derive"] }
#mini-redis = "0.4.1"
#prettytable-rs = "0.9.0"
#tokio = { version = "1.21.1", features = ["full"] }
#reqwest = { version = "0.11.11", features = ["json", "blocking"] }
#serde = "1.0.144"
#serde_derive = "1.0.144"
#serde_json = "1.0.85"
rust-ini = "0.18.0"
colored = "2.0.0"
image = "0.23"
sha2 = "0.8"
hex = "0.4"
anyhow = "1.0"
tch = { version = "0.13.0", features = ["cpython", "image", "regex"] }
regex = "1.8.1"
diffusers = { git = "https://github.com/LaurentMazare/diffusers-rs.git", branch = "main", features = ["clap"] }

#hyper = "0.14.20"
#os_error = "0.1.0"

[[bin]]
name = "tensor-tool"

[profile.release]
opt-level = 'z'     # Optimize for size.
#lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*
