[package]
name = "enso-darknet"
version = "0.1.1"
edition = "2021"
author = ["Sadovnikov Anton <sadovnikoff@gmail.com>"]

description = "Stable diffusion pipeline service"
repository = "https://github.com/siddthartha/enso-darknet"
keywords = ["torch", "deep-learning", "machine-learning", "diffusion", "transformers"]
categories = ["science"]
license = "GPLv3"
readme = "README.md"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.19", features = ["derive"] }
#prettytable-rs = "0.9.0"
#reqwest = { version = "0.11.11", features = ["json", "blocking"] }
rust-ini = "0.18.0"
colored = "2.0.0"
image = "0.23"
sha2 = "0.8"
hex = "0.4"
anyhow = "1.0"
tch = { version = "0.13.0", features = ["cpython", "image", "regex"] }
regex = "1.8.1"
diffusers = { git = "https://github.com/LaurentMazare/diffusers-rs.git", branch = "main", features = ["clap"] }
uuid = "1.3.3"
base64 = "0.21.0"
serde = { version = "1.0.197", features = ["derive"] }
tokio = { version = "1.37.0", features = ["full"] }
warp = "0.3.6"
redis = { version = "0.22.2", features = ["tokio-comp"] }

#hyper = "0.14.20"
#os_error = "0.1.0"
[lib]
crate-type = ["lib"]
bench = false

[[bin]]
name = "tensor-tool"
path = "./src/bin/tensor-tool.rs"

[[bin]]
name = "sd-cli"
path = "./src/bin/sd-cli.rs"

[[bin]]
name = "sd-worker"
path = "./src/bin/sd-worker.rs"

[profile.release]
opt-level = 'z'     # Optimize for size.
#lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*
